# comicpress

./: .clang-format  .clangd  Licence-AGPL.txt  Readme.md  comicpress  meson.build  meson_options.txt  pyproject.toml  requirements.txt  run.py
comicpress/: __main__.py  config.py  displays.py  gui.py  main.py  processing.py  ui_constants.py  worker.py
data/: io.github.amarz45.Comicpress.desktop  io.github.amarz45.Comicpress.metainfo.xml
pch/: pch.hpp
src/: display_presets.h  display_presets.hpp  main.cpp  mupdf_locking.h  options.cpp  processing.cpp  processing.h  processing.hpp  signal.cpp  time.cpp  ui_constants.h  window.cpp  window.h  window.hpp  window_util.cpp  worker.cpp  worker.h
src/gui/: main.cpp  options.cpp  signal.cpp  time.cpp  window.cpp  window_util.cpp
src/gui/include/: display_presets.hpp  options.hpp  ui_constants.hpp  window.hpp  window_util.hpp
src/include/: options.hpp  processing.hpp  task.hpp  ui_constants.hpp  window.hpp
src/worker/: main.cpp  processing-new.cpp  processing.cpp  worker.cpp
src/worker/include/: processing.hpp  worker.hpp
